Edit file package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://TuyenLuis@Congchuateen1:github.com/TuyenLuis/CN_LTTH.git"
+    "url": "https://github.com/TuyenLuis/CN_LTTH.git"
   },
   "author": "",
   "license": "ISC",
