--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
+    "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
     "mssql": "^5.1.0",
     "mssql-session-store": "^1.0.0",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
