--- a/package.json
+++ b/package.json
@@ -18,22 +18,26 @@
   },
   "homepage": "https://github.com/TuyenLuis/CN_LTTH#readme",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "fs-extra": "^8.1.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mssql": "^5.1.0",
     "mssql-session-store": "^1.0.0",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "qs": "^6.9.1",
+    "sha256": "^0.2.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
