--- a/sh/.env.example
+++ b/sh/.env.example
@@ -15,3 +15,9 @@ vnp_TmnCode=***
 vnp_HashSecret=***
 vnp_Url=***
 vnp_ReturnUrl=***
+
+ACCESS_TOKEN_LIFE=***
+ACCESS_TOKEN_SECRET=***
+REFRESH_TOKEN_LIFE=***
+REFRESH_TOKEN_SECRET=***
+
