--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-ejs-extend": "0.0.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "fs-extra": "^8.1.0",
